--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,11 @@ form {
 .custom-purple {
     background-color: #6f42c1 !important;
     color: white; /* Change the text color for better visibility */
-  }
+}
+
+.card-body .card-text i.fa-solid.fa-crown {
+    background-color: #FFA500 !important;
+}
 
 @media (min-width: 1200px) {
     .h2, h2 {
